# opsops

./: .gitignore  .sops.yaml  Cargo.toml  Readme.md  default.nix  example.yaml  flake.nix  justfile  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 155gl2j8w6qpdy0sybggbp01q6fhgc8w-source  7byvhqikdzghdsgxmsvbwkbbp27qc4dg-source
.github/workflows/: test_release.yaml
src/: Readme.md  build.rs  main.rs
src/commands/: decrypt.rs  doctor.rs  edit.rs  encrypt.rs  generate_age_key.rs  init.rs  list_config.rs  mod.rs
src/util/: find_project_root.rs  mod.rs  op.rs  op_key.rs  sops_command.rs  sops_config.rs  sops_status.rs  sops_structs.rs
