[package]
name = "opsops"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.1"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
colored = "3.0.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"]}
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_yaml = "0.9.34"
which = "7.0.3"

[build-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
